--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-# Created by .ignore support plugin (hsz.mobi)
-### PlayFramework template
+
+# Created by https://www.gitignore.io/api/sbt,scala,playframework
+# Edit at https://www.gitignore.io/?templates=sbt,scala,playframework
+
+### PlayFramework ###
 # Ignore Play! working directory #
 bin/
 /db
 .eclipse
-.idea/
 /lib/
 /logs/
 /modules
@@ -18,4 +20,21 @@ server.pid
 /dist/
 .cache
 
-.gradle/
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.lib/
+
+### Scala ###
+*.class
+*.log
+
+# End of https://www.gitignore.io/api/sbt,scala,playframework
